[package]
name = "base64"
version = "0.1.0"
edition = "2021"
authors = ["Bhuwan Pandit"]
description = "A simple library for base64 encoding and decoding"
repository = "https://github.com/bp7968h/base64"
homepage = "https://github.com/bp7968h/base64"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
